cdrom-detect (1.23) UNRELEASED; urgency=low

  * Stop installing eject into target. This will now be handled by
    hw-detect version 1.53.
  * Use anna to install eject-udeb, and use that eject in the finish-install
    script instead of running /target/usr/bin/eject. Closes: #418593

 -- Joey Hess <joeyh@debian.org>  Sun, 06 May 2007 17:12:51 -0400

cdrom-detect (1.22) unstable; urgency=low

  [ Joey Hess ]
  * After scanning CDs, scan for things that look like USB floppies to
    list-devices, since these can sometimes really be USB CD drives.
    (Which is probably a udev or kernel bug). Closes: #410006, 418850
  * Needs di-utils 1.48.

 -- Frans Pop <fjp@debian.org>  Thu, 26 Apr 2007 08:08:52 +0200

cdrom-detect (1.21) unstable; urgency=low

  * Multiply menu-item-numbers by 100

  [ Updated translations ]
  * Esperanto (eo.po) by Serge Leblanc
  * Basque (eu.po) by Piarres Beobide
  * Tamil (ta.po) by Dr.T.Vasudevan

 -- Joey Hess <joeyh@debian.org>  Tue, 10 Apr 2007 14:32:43 -0400

cdrom-detect (1.20) unstable; urgency=low

  [ Updated translations ]
  * Hebrew (he.po) by Lior Kaplan
  * Malayalam (ml.po) by Praveen A
  * Dutch (nl.po) by Bart Cornelis

 -- Frans Pop <fjp@debian.org>  Tue, 27 Feb 2007 16:41:56 +0100

cdrom-detect (1.19) unstable; urgency=low

  [ Updated translations ]
  * Arabic (ar.po) by Ossama M. Khayat
  * Belarusian (be.po) by Pavel Piatruk
  * Bulgarian (bg.po) by Damyan Ivanov
  * Bosnian (bs.po) by Safir Secerovic
  * Catalan (ca.po) by Jordi Mallach
  * Danish (da.po) by Claus Hindsgaul
  * Esperanto (eo.po) by Serge Leblanc
  * Hebrew (he.po) by Lior Kaplan
  * Georgian (ka.po) by Aiet Kolkhi
  * Kurdish (ku.po) by Amed Çeko Jiyan
  * Latvian (lv.po) by Aigars Mahinovs
  * Malayalam (ml.po) by Praveen A
  * Panjabi (pa.po) by A S Alam
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Romanian (ro.po) by Eddy Petrișor
  * Russian (ru.po) by Yuri Kozlov
  * Slovenian (sl.po) by Matej Kovačič