@@ -1,0 +1,9 @@
+#! /bin/sh -e
+# Copy CD-related files to /target.
+
+for file in /etc/udev/rules.d/*persistent-cd.rules; do
+	if [ -f "$file" ]; then
+		mkdir /target/$(dirname $file) -p
+		cp $file /target/$file
+	fi
+done
