@@ -1,9 +1,13 @@
 cdrom-detect (1.23) UNRELEASED; urgency=low
 
+  [ Joey Hess ]
   * Stop installing eject into target. This will now be handled by
     hw-detect version 1.53.
   * Use anna to install eject-udeb, and use that eject in the finish-install
     script instead of running /target/usr/bin/eject. Closes: #418593
+
+  [ Colin Watson ]
+  * Copy udev's persistent-cd rules to the target system if possible.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 06 May 2007 17:12:51 -0400
 
